[package]
name = "imgdown"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.5"
reqwest = { version = "0.11", features = ["default-tls"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.2"
walkdir = "2.3"
yaml-rust = "0.4"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }